@@ -40,6 +40,9 @@
 #cmakedefine HAVE_LIBINTL_H 1
 #cmakedefine HAVE_NETINET_IN_H 1
 #cmakedefine HAVE_NET_IF_H 1
+#cmakedefine HAVE_SYS_PARAM_H 1
+#cmakedefine HAVE_SYS_FILE_H 1
+#cmakedefine HAVE_SYS_LOCKF_H 1
 
 #cmakedefine HAVE_FTOK 1
 #cmakedefine HAVE_GETADDRINFO 1
