@@ -15,6 +15,7 @@
 #include <commoncpp/dccp.h>
 #include <commoncpp/numbers.h>
 #include <commoncpp/process.h>
+#include <commoncpp/file.h>
 #include <commoncpp/mime.h>
 #include <commoncpp/serial.h>
 #include <commoncpp/tokenizer.h>
